Complete '/api/v1/configuresystemparameters'

--- a/Backend/API/src/main/resources/application.properties
+++ b/Backend/API/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=api
+spring.application.name=realtimeeventticketingsystem
 server.port=8080
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=12345
-spring.datasource.url=jdbc:mysql://localhost:3306/event_ticketing_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:sqlite:../realtime_event_ticketing_system_db.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
