--- a/Backend/API/src/main/resources/application.properties
+++ b/Backend/API/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8080
 spring.datasource.url=jdbc:sqlite:../realtime_event_ticketing_system_db.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
